# slambench

./: .gitignore  config.orig  pencil_kernels_opt_kernel.cl  setupSLAMPencil.sh
cmake/: FindPENCIL.cmake
kfusion/: CMakeLists.txt
kfusion/include/: commons.h
kfusion/src/pencil/: kernel_vector.c  kernels.cpp  pencil_kernels.c  pencil_kernels_opt_host.c
patches/: 0001-Enable-PENCIL-OpenCL-benchmark.patch
src/: Makefile  cl_kernel_vector.cl  kernels.cpp  pencil_kernels.c
